testing/roles/copy_deployment_files/files/deployment/nodeapi/nodeapiserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapiserver
  namespace: default
spec:
  clusterIP: None
  ports:
  - port: 3002
    targetPort: 3002
    name: nodeapiserver
  selector:
    k8s-app: nodeapiserver
